--- a/site/index.html
+++ b/site/index.html
@@ -5,11 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation for Apps</title>
-    <link href="./assets/css/app.css" rel="stylesheet" type="text/css">
+   
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.css">
     <script src="./assets/js/foundation.js"></script>
-    <script src="./assets/js/templates.js"></script>
+    <!-- <script src="./assets/js/templates.js"></script> -->
     <script src="./assets/js/routes.js"></script>
     <script src="./assets/js/app.js"></script>
+    <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.js"></script>
+    <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-templates-1.2.0.js"></script>
   </head>
   <body>
     <div class="grid-frame vertical">
