--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./assets/js/templates.js"></script> -->
     <script src="./assets/js/routes.js"></script>
     <script src="./assets/js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.js"></script>
     <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-templates-1.2.0.js"></script>
   </head>
