--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <title>Foundation for Apps</title>
    
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.css">
-    <script src="./assets/js/foundation.js"></script>
+    <!--<script src="./assets/js/foundation.js"></script>-->
     <!-- <script src="./assets/js/templates.js"></script> -->
     <script src="./assets/js/routes.js"></script>
     <script src="./assets/js/app.js"></script>
