--- a/site/index.html
+++ b/site/index.html
@@ -12,8 +12,8 @@
     <script src="./assets/js/routes.js"></script>
     <script src="./assets/js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.js"></script>
-    <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-templates-1.2.0.js"></script>
+    <!--<script src="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.js"></script>-->
+    <!-- <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-templates-1.2.0.js"></script> -->
   </head>
   <body>
     <div class="grid-frame vertical">
@@ -23,6 +23,8 @@
         </ul>
       </div>
       <div ui-view class="grid-content">
+        <a ui-sref="home">Home</a>
+        <a ui-sref="about">About</a>
       </div>
     </div>
   </body>
