--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation for Apps</title>
    
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.css">
     <!--<script src="./assets/js/foundation.js"></script>-->
     <!-- <script src="./assets/js/templates.js"></script> -->
     <script src="./assets/js/routes.js"></script>
@@ -14,7 +14,7 @@
     <script src="./assets/js/angular.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script> -->
     <!--<script src="http://cdn.jsdelivr.net/zurb/foundation-apps-1.2.0.js"></script>-->
-    <script src="http://cdn.jsdelivr.net/zurb/foundation-apps-templates-1.2.0.js"></script>
+    <script src="//cdn.jsdelivr.net/zurb/foundation-apps-templates-1.2.0.js"></script>
   </head>
   <body>
     <div class="grid-frame vertical">
